add self checks